Fixed slider jumping

--- a/explore-styles.css
+++ b/explore-styles.css
@@ -12,7 +12,10 @@ body {
   overflow: hidden;
   zoom: 67%;
 }
-
+.ui-slider .ui-slider-handle{
+  height: 30px;   
+  margin-bottom:-15px;
+}
 
 .animate-in {
     -webkit-animation: fadeIn .8s ease-in;
@@ -1391,8 +1394,7 @@ tspan {
 }
 
 .slider {
-  margin-left:0 1em;
-  margin-top:1em;
+
   position: relative;
   width: 100%;
   height: 32px;
@@ -1417,7 +1419,7 @@ tspan {
   top: 25%;
   width: 3px;
   left: 0;
-  height: 70%;
+  height: 50%;
   background-color: #58778A;
 }
 .slider .progress-section--major {
@@ -1429,7 +1431,7 @@ tspan {
 .slider .progress-section--text {
   position: absolute;
   color: #ccc;
-  bottom: -30px;
+  bottom: -20px; 
   left: 0;
   -webkit-transform: translateX(-50%);
   -moz-transform: translateX(-50%);
@@ -1482,13 +1484,14 @@ tspan {
   top: 0;
   width: 32px;
   height: 32px;
+   
   left: 58%;
   cursor: pointer;
   opacity: 0;
 }
 .slider-knob--inner {
-  width: 20px;
-  height: 20px;
+  width: 18px;
+  height: 18px;
   box-sizing: border-box;
   -moz-box-sizing: border-box;
   border-radius: 50%;
@@ -1503,7 +1506,13 @@ tspan {
 }
 .slider-knob.active .slider-knob--inner {
   background-color:white;
+  
+
 }
+.ui-slider .ui-slider-handle{
+  height: 30px;   
+} 
+
 .slider .bubble {
   position: absolute;
   padding: 5px;
@@ -1528,7 +1537,7 @@ tspan {
   width: calc(50% + 20px);
   height: 10px;
   margin: 0 0 0 -50px;
-  background: #47b549;
+  background: #000000;
 }
 .slider .bubble:after {
   content: "";
@@ -1561,6 +1570,7 @@ tspan {
 .slider.expand .slider-knob--inner {
   width: 100%;
   height: 100%;
+  
   -webkit-transform: translateX(0px) translateY(0px);
   -moz-transform: translateX(0px) translateY(0px);
   -ms-transform: translateX(0px) translateY(0px);
